loader для ts перенесён на babel + написан свой плагин на babel svg jpg png лоадеры реализованы ленивые чанки подгрузки копирование файлов в билд с помощью плагина настроена иконка сайта

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,13 @@
     "module": "ESNext",
     // import * as ... from ... => import ... from ... (настройка дефолтного импорта)
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+
+    //настройка алиасов (псевдонимы путей)
+    "baseUrl": ".",
+    "paths": {
+      "@/*":["./src/*" ],
+    }
   },
 
   //изменил для webpack.config.ts
