--- a/package.json
+++ b/package.json
@@ -7,23 +7,39 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --env mode=development",
     "build:dev": "webpack --env mode=development",
-    "build:relize": "webpack --env mode=production"
+    "build:relize": "webpack --env mode=production",
+    "build:relize:analyzer": "webpack --env mode=production --env analyzer=true",
+    "build:mobile": "webpack --env mode=production --env platform=mobile",
+    "build:desktop": "webpack --env mode=production --env platform=desktop"
   },
   "author": "Grigory Titov",
   "license": "ISC",
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/webpack-bundle-analyzer": "^4.7.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "webpack": "^5.90.3",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-dev-server": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/babel__core": "^7.20.5",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
     "@types/webpack": "^5.28.5",
     "@types/webpack-dev-server": "^4.7.2",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "mini-css-extract-plugin": "^2.8.0",
     "sass": "^1.71.1",
